[workspace]
resolver = "2"
members = ["rackd", "rackd-ebpf"]
default-members = ["rackd"]

[workspace.dependencies]
which = { version = "6.0.0", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
anyhow = { version = "1", default-features = false }
network-types = "0.0.7"
macaddr = "1.0.1"
dotenv = "0.15.0"

[profile.release.package.rackd-ebpf]
debug = 2
codegen-units = 1