[toolchain]
channel = "nightly"

[package]
name = "rackd"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
futures = "0.3.30"
include_dir = "0.7.4"
lazy_static = "1.5.0"
netlink-packet-route = "0.19.0"
rtnetlink = "0.14.1"
num_enum = "0.7.3"
openraft = "0.9.17"
regex = "1.10.6"
rusqlite = { version = "0.32.1", features = ["bundled"] }
semver = { version = "1.0.23", features = ["serde"] }
text-colorizer = "1.0.0"
thiserror = "1.0.64"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
num-traits = "0.2.19"
anyhow = { workspace = true }
aya = { workspace = true }
aya-log = { workspace = true }
aya-log-ebpf = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
macaddr = { workspace = true, features = ["serde"] }
dotenv = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
config = "0.15.6"
utoipa = { version = "5.3.1", features = ["uuid"] }
utoipa-axum = "0.2.0"
unicode-segmentation = "1.12.0"
mime = "0.3.17"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
chrono = { version = "0.4.40", features = ["clock"] }
field_types = "1.1.0"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
rackd-ebpf = { path = "../rackd-ebpf" }

[[bin]]
name = "rackd"
path = "src/main.rs"
